# ffmpeg-live-vaapi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_arm64.sh  build_x86.sh  cross.cmake
ext/live/: CMakeLists.txt
ext/live/BasicUsageEnvironment/: CMakeLists.txt
ext/live/UsageEnvironment/: CMakeLists.txt
ext/live/groupsock/: CMakeLists.txt  GroupsockHelper.cpp
ext/live/groupsock/include/: GroupsockHelper.hh
ext/live/hlsProxy/: CMakeLists.txt
ext/live/liveMedia/: CMakeLists.txt
ext/live/mediaServer/: CMakeLists.txt
ext/live/proxyServer/: CMakeLists.txt
ext/live/testProgs/: CMakeLists.txt
src/: egl_compat.h  ffmpeg_utils.c  ffvadecoder.c  ffvadecoder.cpp  ffvademo.c  ffvademo.cpp  ffvadisplay.c  ffvafilter.c  ffvarenderer.c  ffvarenderer_egl.c  ffvarenderer_x11.c  ffvartsp.cpp  ffvartsp.hh  ffvartsp.tar  vaapi_utils.c
